--- a/src/app/avocations/avocation.css
+++ b/src/app/avocations/avocation.css
@@ -172,10 +172,10 @@ html {
     .info-container::-webkit-scrollbar {
         display: none;
     }
-    
 
     .shining-line {
         width: 69%;
+        margin-top: -20px;
         margin-left: 10px;
         height: 3px;
     }
