--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -40,7 +40,7 @@ body {
 }
 
 
-@media (max-width: 953px) {
+@media (min-width: 1400px) {
     .devimage {
         display: none;
     }
@@ -77,6 +77,126 @@ body {
     }
 }
 
+@media (max-width: 1399px) and (min-width: 1200px) {
+    .devimage {
+        display: none;
+    }
+
+    .body {
+        height: 100vh;
+    }
+
+    .main-container {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+        margin-top: 30px;
+        margin-right: 0px;
+        margin-left: 85px;
+        height: max-content;
+    }
+
+    .name {
+        width: 30%;
+        margin: 0 auto 20px auto;
+    }
+
+    .tagline {
+        width: max-content;
+        margin: 0 auto 10px auto;
+
+        grid-row-gap: 100px;
+        margin-top: -100px;
+        margin-right: 0px;
+        margin-left: 85px;
+    }
+
+    .main-container> :first-child {
+        order: 2;
+    }
+
+    .main-container> :last-child {
+        grid-row: 1;
+    }
+
+    .logo img {
+        width: 50%;
+    }
+
+    .parthimage {
+        width: 80%;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 4px solid #00ABF0;
+    }
+
+    .devimage-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 1199px) and (min-width: 768px) {
+    .devimage {
+        display: none;
+    }
+
+    .body {
+        height: 100vh;
+    }
+
+    .main-container {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+        margin-top: 30px;
+        margin-right: 0px;
+        margin-left: 85px;
+        height: max-content;
+    }
+
+    .name {
+        width: 30%;
+        margin: 0 auto 20px auto;
+    }
+
+    .tagline {
+        width: max-content;
+        margin: 0 auto 10px auto;
+        grid-row-gap: 100px;
+        margin-top: -10px;
+        margin-right: 0px;
+        margin-left: 85px;
+    }
+
+    .main-container> :first-child {
+        order: 2;
+    }
+
+    .main-container> :last-child {
+        grid-row: 1;
+    }
+
+    .logo img {
+        width: 50%;
+    }
+
+    .parthimage {
+        width: 80%;
+        height: 50%;
+        border-radius: 50%;
+        border: 4px solid #00ABF0;
+    }
+
+    .devimage-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 768px) {
     .devimage {
         display: none;
@@ -105,7 +225,6 @@ body {
     .tagline {
         width: max-content;
         margin: 0 auto 10px auto;
-
         grid-row-gap: 100px;
         margin-top: -100px;
         margin-right: 0px;
