--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -210,7 +210,7 @@ body {
     }
 
     .name {
-        width: 30%;
+        width: max-content;
         margin: 0 auto 20px auto;
     }
 
@@ -218,9 +218,13 @@ body {
         width: max-content;
         margin: 0 auto 10px auto;
         grid-row-gap: 100px;
-        margin-top: -100px;
-        margin-right: 0px;
-        margin-left: 85px;
+        margin: 0 auto;
+    }
+
+    .paragraph{
+        width: max-content;
+        padding: 5px;
+        margin: 0 auto;
     }
 
     .main-container> :first-child {
