--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -178,9 +178,10 @@ body {
     }
 
     .parthimage {
-        width: 30%;
+        width: 60%;
         height: 50%;
         border-radius: 50%;
+        margin: 0 auto;
         border: 4px solid #00ABF0;
     }
 
