--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -137,7 +137,7 @@ body {
 
     .main{
         width: max-content;
-        
+        margin: 0 auto;
     }
 
     .main-container {
@@ -161,7 +161,7 @@ body {
         margin: 0 auto 20px auto;
         grid-row-gap: 100px;
         margin-top: -10px;
-        margin-right: 0px;
+        margin-right: 100px;
         margin-left: 85px;
     }
 
