--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -145,14 +145,14 @@ body {
         grid-template-rows: auto auto;
         grid-template-columns: 1fr;
         grid-row-gap: 50px;
-        margin-top: 30px;
+        margin-top: -40px;
         margin-right: 0px;
         margin-left: 85px;
         height: max-content;
     }
 
     .name {
-        width: 30%;
+        width: max-content;
         margin: 0 auto 20px auto;
     }
 
